--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,13 @@
 body {
     margin: 0;
+    display: flex;
+    flex-wrap: wrap;
   }
 
   header {
     background: rgb(238, 61, 7);
-    height: 50%;
+    flex-basis: 100%;
+   /* height: 50%; */
   }
 
   h1 {
@@ -16,58 +19,79 @@ body {
   .left {
     background: green;
     color: white;
-    flex-grow: 1;
-    order: 0;
+    flex-basis: 25%;
+    /* flex-grow: 1; */
+    /* order: 0; */
   }
 
   .right {
     background: pink;
     color: white;
-    flex-grow: 1;
-    order: 2;
+    flex-basis: 25%;
+    /* flex-grow: 1;
+    order: 2; */
   }
 
   article {
     background: aqua;
     color: white;
-    flex-grow: 1;
-    order: 1;
+    flex-basis: 50%;
+    /* flex-grow: 1;
+    order: 1; */
   }
 
-  section {
+  /* section {
     display: flex;
     width: 100%;
     flex-wrap: wrap;
     flex-grow: 1;
-  }
+  } */
 
   footer {
     background-color: violet;
     text-align: center;
     color: white;
-    width: 100%;
+    flex-basis: 100%;
   }
 
 @media screen and (max-width: 992px) {
-    .left,
+    /* .left,
     .right,
     article {
         width: 768px;
+    } */
+    article {
+      order: 1;
+      flex-basis: 75%;
+    }
+
+    .right {
+      order: 2;
+      flex-basis: 25%;
+    }
+
+    .left {
+      order: 3;
+      flex-basis: 100%;
+    }
+
+    footer {
+      order: 4;
     }
 }
 
 @media screen and (max-width: 768px) {
-    .left,
-    .right,
     article {
-        width: 95%;
+      flex-basis: 100%;
+    }
+    
+    .left {
+      order: 2;
+    }
+
+    .right {
+      order: 3;
+      flex-basis: 100%;
     }
 }
 
-@media screen and (max-width: 480px) {
-    .left,
-    .right,
-    article {
-        width: 3em;
-    }
-}
